# mnist_GAN_CPP

./: .gitignore  CMakeLists.txt
scripts/: build.sh  config.sh  run.sh
src/: main.cpp
